# kgen

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: rust.yml
src/main/kotlin/kgen/: Casing.kt  Comment.kt  Helpers.kt  Id.kt  Identifiable.kt  Identifier.kt  Logging.kt  Merge.kt  RunCommand.kt  StringUtilities.kt
src/main/kotlin/kgen/db/: DbColumn.kt  DbTable.kt  DbTableClassifier.kt  DbType.kt  ModeledColumn.kt  ModeledTable.kt  ModeledUniqueKey.kt
src/main/kotlin/kgen/markdown/: Markdown.kt
src/main/kotlin/kgen/proto/: AsProto.kt  Enum.kt  EnumField.kt  Field.kt  FieldType.kt  Message.kt  MessageField.kt  OneOf.kt  ProtoFile.kt  ProtoFileSet.kt  Udt.kt  Version.kt
src/main/kotlin/kgen/rust/: Access.kt  AsRust.kt  AssociatedType.kt  Attr.kt  AttrList.kt  Binary.kt  Bounds.kt  CargoToml.kt  CommonTraits.kt  Const.kt  Crate.kt  Ctor.kt  Derive.kt  Enum.kt  EnumValue.kt  Field.kt  Fn.kt  FnBody.kt  FnParam.kt  GenericArgSet.kt  GenericDecl.kt  GenericParamSet.kt  Helpers.kt  Identifiable.kt  InlineDecl.kt  Lazy.kt  Let.kt  Lifetime.kt  ModDecl.kt  Module.kt  ModuleType.kt  Ref.kt  Static.kt  StaticInit.kt  StrRef.kt  Struct.kt  Trait.kt  TraitBound.kt  TraitImpl.kt  (+8 more)
src/test/kotlin/kgen/: CasingKtTest.kt  ClosedMergeKtTest.kt  CommentKtTest.kt  IdKtTest.kt  MergeKtTest.kt  OpenMergeKtTest.kt  RunCommandKtTest.kt  StringUtilitiesKtTest.kt
temp/kgen_db/: Cargo.toml
temp/kgen_db/src/: keyless.rs  lib.rs  sample.rs  sample_with_id.rs
temp/kgen_db/tests/: db.rs
temp/kgen_db/tests/db_tests/: mod.rs  support.rs  test_keyless.rs  test_sample.rs  test_sample_with_id.rs
(+72 files in other folders)
