[package]
edition = "2021"
name = "kgen_db"
version = "0.0.1"
description = """TODO: Document Crate(kgen_db)"""
license = "MIT"
keywords = []


[lib]
# α <lib>
# ω <lib>

[dependencies]
# α <dependencies>
chrono = "0.4.38"
tokio = { version="1.38.0", features = ["macros", "test-util" ] }
tokio-postgres = { version = "0.7.10", features = [ "with-chrono-0_4", "with-uuid-1" ] }
tracing = "0.1.40"
tracing-test = "0.2.5"
uuid = { version = "1.9.1", features = ["v4"] }
# ω <dependencies>

[build-dependencies]
# α <build-dependencies>
# ω <build-dependencies>

[features]
# α <features>
# ω <features>
# α <additional>
# ω <additional>